# zksync-fuzzing

./: .gitignore  README.md  foundry.toml
fuzz/: Cargo.toml
fuzz/src/: main.rs
script/: DeployEIP712Verifier.s.sol
src/: EIP712Verifier.sol
