[package]
name = "fuzz"
version = "0.1.0"
authors = ["you <you@example.com>"]
edition = "2021"

[dependencies]
ethers = { version = "2", default-features = false, features = ["abigen", "rustls"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
rand = "0.9"
anyhow = "1"
thiserror = "2"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
